--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,5 +34,6 @@ jobs:
     - name: Run test for all services
       run: |
         pip install pytest
+        pytest --disable-warnings
         pytest notice_service_test.py
   
