modified:   .github/workflows/CI.yml new file:   config_test.py

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,4 +37,5 @@ jobs:
         pytest --disable-warnings
         pytest notice_service_test.py
         pytest models_test.py
+        pytest config_test.py
   
