modified:   .github/workflows/CI.yml modified:   config_test.py

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,6 +31,9 @@ jobs:
         pip install flake8
         flake8 notice_service.py models.py config.py
 
+    - name: Debug .env file
+      run: cat .env
+
     - name: Run test for all services
       run: |
         pip install pytest
