--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Flask CI/CD
 
 on: 
   push:
@@ -43,3 +43,26 @@ jobs:
         pytest models_test.py
         pytest config_test.py
   
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and Push Docker Image
+      run: |
+        IMAGE_NAME=ghcr.io/${{ secrets.GHCR_USERNAME }}/notice_service:latest
+        docker build -t $IMAGE_NAME ./notice_service
+        docker push $IMAGE_NAME
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Deploy using docker-compose
+      run: |
+        docker-compose pull
+        docker-compose up -d
