--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,12 +50,12 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ secrets.GHCR_USERNAME }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and Push Docker Image
       run: |
-        IMAGE_NAME=ghcr.io/${{ secrets.GHCR_USERNAME }}/notice_service:latest
+        IMAGE_NAME=ghcr.io/${{ github.actor }}/notice_service:latest
         docker build -t $IMAGE_NAME .
         docker push $IMAGE_NAME
 
