modified:   .github/workflows/CI.yml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -68,5 +68,5 @@ jobs:
     steps:
     - name: Deploy using docker-compose
       run: |
-        docker-compose pull
-        docker-compose up -d
+        docker compose pull
+        docker compose up -d
