--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,13 +66,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push-docker-image
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Deploy using docker-compose
       run: |
-        cd ./docker-compose.yaml
+        cd .
         docker compose pull
         docker compose up -d
