--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,31 +1,88 @@
-version: "3.8"
+version: '3'
 
 services:
-  notice_service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      - DB_USER=root
-      - DB_PASSWORD=mysql
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_NAME=notice_db
+  api_gateway:
+    build: ./api_gateway
+    expose:
+      - "5000"
+    depends_on:
+      - login_service
+      - course_service
+      - festival_service
+      - main_service
+      - notice_service
+    env_file:
+      - ./api_gateway/.env
+
+  login_service:
+    build: ./login_service
+    expose:
+      - "5006"
     depends_on:
       - mysql
-    ports:
-      - "5004:5004"
-  
+    env_file:
+      - ./login_service/.env
+
+  course_service:
+    build: ./course_service
+    expose:
+      - "5001"
+    depends_on:
+      - mysql
+    env_file:
+      - ./course_service/.env
+
+  festival_service:
+    build: ./festival_service
+    expose:
+      - "5002"
+    depends_on:
+      - mysql
+    volumes:
+      - ./festival_service:/app
+    env_file:
+      - ./festival_service/.env
+
+  main_service:
+    build: ./main_service
+    expose:
+      - "5003"
+    depends_on:
+      - mysql
+    env_file:
+      - ./main_service/.env
+
+  notice_service:
+    build: ./notice_service
+    expose:
+      - "5004"
+    depends_on:
+      - mysql
+    env_file:
+      - ./notice_service/.env
+
   mysql:
-    image: mysql:8.0
+    image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: mysql
-      MYSQL_DATABASE: notice_db
-    ports:
-      - "3307:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - api_gateway
+      - login_service
+      - course_service
+      - festival_service
+      - main_service
+      - notice_service
+
 volumes:
-  mysql-data:
+  mysql_data:
+
