--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,22 +30,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r ./requirements.txt
 
-    - name: Run lint for all services
-      run: |
-        pip install flake8
-        flake8 notice_service.py models.py config.py
-
-    - name: Debug .env file
-      run: cat .env
-
     - name: Run test for all services
-      run: |
-        pip install pytest
-        pip install python-dotenv
-        pytest --disable-warnings
-        pytest notice_service_test.py
-        pytest models_test.py
-        pytest config_test.py
+      run: unittest notice_service_test.py
   
     - name: Checkout repository
       uses: actions/checkout@v3
