--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,50 +1,79 @@
-name: Flask CI/CD
+name: CI
 
-on: 
+on:
   push:
-    branches: 
-      - main
+    branches: [ main ]
   pull_request:
-    branches: 
-      - main
-
-permissions:
-  contents: read
-  packages: write
+    branches: [ main ]
 
 jobs:
-  lint-and-test:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # Checkout repository
+      - uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12.4'
+      # Set up Docker Buildx for multi-platform builds
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r ./requirements.txt
+      # Install Docker Compose
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
-    - name: Run test for all services
-      run: python -m unittest notice_service_test.py
-  
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # Build and start the services with Docker Compose
+      - name: Build and start services
+        run: docker-compose -f docker-compose.yaml up -d
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_TOKEN }}
+      # Wait for MySQL to be ready before running the tests
+      - name: Wait for MySQL
+        run: |
+          timeout 60s bash -c '
+          until docker-compose -f docker-compose.yaml exec -T mysql mysqladmin ping -h localhost -u root -pmysql --silent; do
+            echo "Waiting for MySQL to be ready..."
+            sleep 2
+          done
+          '
 
-    - name: Build and Push Docker Image
-      run: |
-        IMAGE_NAME=ghcr.io/${{ secrets.GHCR_USERNAME }}/notice_service:latest
-        docker build -t $IMAGE_NAME .
-        docker push $IMAGE_NAME
+      # Run tests using unittest in the login_service container
+      - name: Run tests
+        run: |
+          docker-compose -f docker-compose.yaml exec -T notice_service python -m unittest test_notice_service.py
+
+      # Stop and remove the containers used for testing
+      - name: Stop services
+        run: docker-compose -f docker-compose.yaml down
+
+  push_to_ghcr:
+    runs-on: ubuntu-latest
+    needs: build_and_test  # Ensure this runs after the tests pass
+
+    steps:
+      # Checkout repository
+      - uses: actions/checkout@v2
+
+      # Log in to GitHub Container Registry (GHCR)
+      - name: Log in to GitHub Container Registry (GHCR)
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      # Build the Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t ghcr.io/yeongkyukang/notice_service:latest .
+
+      # Push the Docker image to GHCR.
+      - name: Push Docker image to GHCR
+        run: |
+          docker push ghcr.io/yeongkyukang/notice_service:latest
+
+      # Verify image push
+      - name: Verify image
+        run: |
+          docker pull ghcr.io/yeongkyukang/notice_service:latest
