modified:   .github/workflows/CI.yml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,7 +41,7 @@ jobs:
       # Run tests using unittest in the login_service container
       - name: Run tests
         run: |
-          docker-compose -f docker-compose.yaml exec -T notice_service python -m unittest test_notice_service.py
+          docker-compose -f docker-compose.yaml exec -T notice_service python -m unittest notice_service_test.py
 
       # Stop and remove the containers used for testing
       - name: Stop services
